fix style on mobile

--- a/public/sass/mystyles.scss
+++ b/public/sass/mystyles.scss
@@ -22,7 +22,7 @@ input[type="date"]{
 }
 
 @media screen and (max-width: 450px){
-  #journal--table{
+  #entry--table{
     overflow: scroll;
   }
 }
